[package]
name = "cf2-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
globset = "0.4.18"
rmcp = { version = "2.1.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
